removed unused pandas import

--- a/covid-xray-prediction.ipynb
+++ b/covid-xray-prediction.ipynb
@@ -29,8 +29,7 @@
     "import torch.optim as optim\n",
     "import torch.nn.functional as F\n",
     "import torchvision.transforms as transforms\n",
-    "from torchvision.datasets import ImageFolder\n",
-    "import pandas as pd"
+    "from torchvision.datasets import ImageFolder\n"
    ]
   },
   {
